--- a/tabular/ML_2semestre.ipynb
+++ b/tabular/ML_2semestre.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "cRD9wX4eKn3y"
       },
@@ -38,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -51,7 +51,9 @@
         {
           "data": {
             "text/html": [
-              "<div>\n",
+              "\n",
+              "  <div id=\"df-28110e72-0274-4eb0-a7d1-348635fec656\" class=\"colab-df-container\">\n",
+              "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
               "        vertical-align: middle;\n",
@@ -216,7 +218,89 @@
               "  </tbody>\n",
               "</table>\n",
               "<p>5 rows × 21 columns</p>\n",
-              "</div>"
+              "</div>\n",
+              "    <div class=\"colab-df-buttons\">\n",
+              "      \n",
+              "  <div class=\"colab-df-container\">\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-28110e72-0274-4eb0-a7d1-348635fec656')\"\n",
+              "            title=\"Convert this dataframe to an interactive table.\"\n",
+              "            style=\"display:none;\">\n",
+              "      \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\" viewBox=\"0 -960 960 960\">\n",
+              "    <path d=\"M120-120v-720h720v720H120Zm60-500h600v-160H180v160Zm220 220h160v-160H400v160Zm0 220h160v-160H400v160ZM180-400h160v-160H180v160Zm440 0h160v-160H620v160ZM180-180h160v-160H180v160Zm440 0h160v-160H620v160Z\"/>\n",
+              "  </svg>\n",
+              "    </button>\n",
+              "    \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-buttons div {\n",
+              "      margin-bottom: 4px;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "    <script>\n",
+              "      const buttonEl =\n",
+              "        document.querySelector('#df-28110e72-0274-4eb0-a7d1-348635fec656 button.colab-df-convert');\n",
+              "      buttonEl.style.display =\n",
+              "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "      async function convertToInteractive(key) {\n",
+              "        const element = document.querySelector('#df-28110e72-0274-4eb0-a7d1-348635fec656');\n",
+              "        const dataTable =\n",
+              "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                    [key], {});\n",
+              "        if (!dataTable) return;\n",
+              "\n",
+              "        const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "          '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "          + ' to learn more about interactive tables.';\n",
+              "        element.innerHTML = '';\n",
+              "        dataTable['output_type'] = 'display_data';\n",
+              "        await google.colab.output.renderOutput(dataTable, element);\n",
+              "        const docLink = document.createElement('div');\n",
+              "        docLink.innerHTML = docLinkHtml;\n",
+              "        element.appendChild(docLink);\n",
+              "      }\n",
+              "    </script>\n",
+              "  </div>\n",
+              "  \n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
             ],
             "text/plain": [
               "   customerID  gender  SeniorCitizen Partner Dependents  tenure PhoneService  \\\n",
@@ -250,7 +334,7 @@
               "[5 rows x 21 columns]"
             ]
           },
-          "execution_count": 3,
+          "execution_count": 2,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -263,7 +347,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -305,7 +389,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -316,14 +400,31 @@
       },
       "outputs": [
         {
-          "ename": "NameError",
-          "evalue": "name 'cols' is not defined",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-            "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# We are going to display the types of every columns now to see if it matches\u001b[39;00m\n\u001b[32m      2\u001b[39m df.columns.to_list()\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m \u001b[38;5;28mprint\u001b[39m(df[\u001b[43mcols\u001b[49m].dtypes)\n",
-            "\u001b[31mNameError\u001b[39m: name 'cols' is not defined"
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "customerID           object\n",
+            "gender               object\n",
+            "SeniorCitizen         int64\n",
+            "Partner              object\n",
+            "Dependents           object\n",
+            "tenure                int64\n",
+            "PhoneService         object\n",
+            "MultipleLines        object\n",
+            "InternetService      object\n",
+            "OnlineSecurity       object\n",
+            "OnlineBackup         object\n",
+            "DeviceProtection     object\n",
+            "TechSupport          object\n",
+            "StreamingTV          object\n",
+            "StreamingMovies      object\n",
+            "Contract             object\n",
+            "PaperlessBilling     object\n",
+            "PaymentMethod        object\n",
+            "MonthlyCharges      float64\n",
+            "TotalCharges         object\n",
+            "Churn                object\n",
+            "dtype: object\n"
           ]
         }
       ],
@@ -336,7 +437,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -723,6 +824,60 @@
         "df.dropna(inplace=True)\n",
         "\n",
         "display(df.head())"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 8,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "the attrition rate is : 31.506460315206585, the retention rate is : 68.49353968479342, the average lifespan 3.1506460315206586\n"
+          ]
+        }
+      ],
+      "source": [
+        "attrition_rate = (len(df[df[\"Churn\"] == \"Yes\"]) / df.shape[0]) * 100\n",
+        "\n",
+        "\n",
+        "retention_rate = 100 - attrition_rate\n",
+        "\n",
+        "avg_lifespan = attrition_rate / 10\n",
+        "\n",
+        "\n",
+        "print(f\"the attrition rate is : {attrition_rate}, the retention rate is : {retention_rate}, the average lifespan {avg_lifespan}\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "7043"
+            ]
+          },
+          "execution_count": 9,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df.shape[0]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df.to_csv()"
       ]
     },
     {
@@ -4813,21 +4968,9 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": ".venv",
+      "display_name": "Python 3 (ipykernel)",
       "language": "python",
       "name": "python3"
-    },
-    "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.13.5"
     }
   },
   "nbformat": 4,
