--- a/segmentation/MaskRCNN/climb.ipynb
+++ b/segmentation/MaskRCNN/climb.ipynb
@@ -451,43 +451,41 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 1,
             "id": "viz_code",
             "metadata": {},
-            "outputs": [
-                {
-                    "ename": "NameError",
-                    "evalue": "name 'model' is not defined",
-                    "output_type": "error",
-                    "traceback": [
-                        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-                        "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-                        "\u001b[0;32m/tmp/ipython-input-3259810406.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0meval\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mimg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdataset_test\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mno_grad\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mprediction\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mimg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-                        "\u001b[0;31mNameError\u001b[0m: name 'model' is not defined"
-                    ]
-                }
-            ],
+            "outputs": [],
             "source": [
-                "model.eval()\n",
-                "img, _ = dataset_test[0]\n",
+                "import os\n",
+                "import torch\n",
+                "import torchvision\n",
+                "from PIL import Image\n",
+                "from torchvision.transforms import functional as F\n",
+                "import matplotlib.pyplot as plt\n",
+                "import numpy as np\n",
+                "import random\n",
+                "from torchvision.models.detection import maskrcnn_resnet50_fpn\n",
+                "from torchvision.models.detection.faster_rcnn import FastRCNNPredictor\n",
+                "from torchvision.models.detection.mask_rcnn import MaskRCNNPredictor\n",
                 "\n",
-                "with torch.no_grad():\n",
-                "    prediction = model([img.to(device)])\n",
+                "# --- Model Definition (Must match training) ---\n",
+                "def get_model_instance_segmentation(num_classes):\n",
+                "    # load an instance segmentation model pre-trained on COCO\n",
+                "    model = maskrcnn_resnet50_fpn(pretrained=False) # We load our own weights\n",
+                "    \n",
+                "    # get number of input features for the classifier\n",
+                "    in_features = model.roi_heads.box_predictor.cls_score.in_features\n",
+                "    # replace the pre-trained head with a new one\n",
+                "    model.roi_heads.box_predictor = FastRCNNPredictor(in_features, num_classes)\n",
                 "\n",
-                "print(\"Number of detected holds:\", len(prediction[0]['masks']))\n",
-                "\n",
-                "# Visualize\n",
-                "img_np = img.mul(255).permute(1, 2, 0).byte().numpy()\n",
-                "plt.figure(figsize=(12, 12))\n",
-                "plt.imshow(img_np)\n",
-                "\n",
-                "# Overlay masks (simple logic)\n",
-                "for i in range(len(prediction[0]['masks'])):\n",
-                "    mask = prediction[0]['masks'][i, 0].mul(255).byte().cpu().numpy()\n",
-                "    score = prediction[0]['scores'][i].item()\n",
-                "    if score > 0.5: # Filter low confidence\n",
-                "        plt.imshow(mask, cmap='jet', alpha=0.3)\n",
-                "plt.show()"
+                "    # now get the number of input features for the mask classifier\n",
+                "    in_features_mask = model.roi_heads.mask_predictor.conv5_mask.in_channels\n",
+                "    hidden_layer = 256\n",
+                "    # and replace the mask predictor with a new one\n",
+                "    model.roi_heads.mask_predictor = MaskRCNNPredictor(in_features_mask,\n",
+                "                                                       hidden_layer,\n",
+                "                                                       num_classes)\n",
+                "    return model"
             ]
         },
         {
@@ -496,20 +494,156 @@
             "id": "ebac06b2",
             "metadata": {},
             "outputs": [],
-            "source": []
+            "source": [
+                "def main():\n",
+                "    # --- Setup ---\n",
+                "    device = torch.device('cuda') if torch.cuda.is_available() else torch.device('cpu')\n",
+                "    print(f\"Using device: {device}\")\n",
+                "\n",
+                "    # --- Load Model ---\n",
+                "    num_classes = 2 # background + hold\n",
+                "    model = get_model_instance_segmentation(num_classes)\n",
+                "\n",
+                "    model_path = 'climbing_model_epoch5.pth'\n",
+                "    if not os.path.exists(model_path):\n",
+                "        print(f\"Error: Model file '{model_path}' not found.\")\n",
+                "        return\n",
+                "\n",
+                "    print(f\"Loading model from {model_path}...\")\n",
+                "    # Load state dict\n",
+                "    state_dict = torch.load(model_path, map_location=device)\n",
+                "    model.load_state_dict(state_dict)\n",
+                "    model.to(device)\n",
+                "    model.eval()\n",
+                "\n",
+                "    # --- Load Test Image ---\n",
+                "    # Path to the specific test image found earlier\n",
+                "    dataset_path = 'Hold Detector.v2i.coco-segmentation'\n",
+                "    test_dir = os.path.join(dataset_path, 'test')\n",
+                "    \n",
+                "    # Try to find a valid image\n",
+                "    img_name = '43d78bf0874b7b6def76e7d846ec6fc4_jpg.rf.8463ddc27821845eeff514149e782f7b.jpg'\n",
+                "    img_path = os.path.join(test_dir, img_name)\n",
+                "\n",
+                "    if not os.path.exists(img_path):\n",
+                "        print(f\"Specific image not found at {img_path}, looking for any jpg in {test_dir}...\")\n",
+                "        if os.path.exists(test_dir):\n",
+                "            for f in os.listdir(test_dir):\n",
+                "                if f.lower().endswith(('.jpg', '.jpeg', '.png')):\n",
+                "                    img_path = os.path.join(test_dir, f)\n",
+                "                    break\n",
+                "    \n",
+                "    if not os.path.exists(img_path):\n",
+                "        print(\"No test image found.\")\n",
+                "        return\n",
+                "\n",
+                "    print(f\"Using image: {img_path}\")\n",
+                "\n",
+                "    image = Image.open(img_path).convert(\"RGB\")\n",
+                "    image_tensor = F.to_tensor(image).unsqueeze(0).to(device)\n",
+                "\n",
+                "    # --- Inference ---\n",
+                "    print(\"Running inference...\")\n",
+                "    with torch.no_grad():\n",
+                "        prediction = model(image_tensor)\n",
+                "\n",
+                "    # --- Visualization ---\n",
+                "    print(\"Visualizing results...\")\n",
+                "    \n",
+                "    img_np = np.array(image)\n",
+                "    \n",
+                "    # Create figure and axes\n",
+                "    fig, ax = plt.subplots(1, figsize=(12, 9))\n",
+                "    ax.imshow(img_np)\n",
+                "\n",
+                "    pred_score_threshold = 0.75\n",
+                "    pred_boxes = prediction[0]['boxes'].cpu().numpy()\n",
+                "    pred_masks = prediction[0]['masks'].cpu().numpy()\n",
+                "    pred_scores = prediction[0]['scores'].cpu().numpy()\n",
+                "\n",
+                "    # Helper function for random colors\n",
+                "    def random_color():\n",
+                "        return (random.random(), random.random(), random.random())\n",
+                "\n",
+                "    num_instances = 0\n",
+                "    for i in range(len(pred_masks)):\n",
+                "        if pred_scores[i] > pred_score_threshold:\n",
+                "            num_instances += 1\n",
+                "            mask = pred_masks[i, 0]\n",
+                "            mask = (mask > 0.5) # Boolean mask\n",
+                "            \n",
+                "            if mask.sum() > 0:\n",
+                "                color = random_color()\n",
+                "                \n",
+                "                # Apply mask overlay\n",
+                "                # Create an RGBA image for the mask\n",
+                "                mask_rgba = np.zeros((mask.shape[0], mask.shape[1], 4))\n",
+                "                mask_rgba[mask, 0:3] = color\n",
+                "                mask_rgba[mask, 3] = 0.5 # Alpha\n",
+                "                \n",
+                "                ax.imshow(mask_rgba)\n",
+                "                \n",
+                "                # Draw bounding box\n",
+                "                box = pred_boxes[i]\n",
+                "                x_min, y_min, x_max, y_max = box\n",
+                "                rect = plt.Rectangle((x_min, y_min), x_max - x_min, y_max - y_min, \n",
+                "                                     fill=False, edgecolor=color, linewidth=2)\n",
+                "                ax.add_patch(rect)\n",
+                "                ax.text(x_min, y_min - 5, f'{pred_scores[i]:.2f}', color=color, fontsize=10, weight='bold')\n",
+                "\n",
+                "    plt.axis('off')\n",
+                "    plt.title(f\"Detected {num_instances} holds (Threshold: {pred_score_threshold})\")\n",
+                "    \n",
+                "    output_file = 'prediction_result.png'\n",
+                "    plt.savefig(output_file, bbox_inches='tight')\n",
+                "    print(f\"Result saved to {output_file}\")\n",
+                "    plt.show()\n",
+                "    plt.close()"
+            ]
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 3,
             "id": "2135b31a",
             "metadata": {},
-            "outputs": [],
-            "source": []
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Using device: cuda\n"
+                    ]
+                },
+                {
+                    "name": "stderr",
+                    "output_type": "stream",
+                    "text": [
+                        "c:\\Users\\silue\\Documents\\telecom_clustering\\.venv\\Lib\\site-packages\\torchvision\\models\\_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
+                        "  warnings.warn(\n",
+                        "c:\\Users\\silue\\Documents\\telecom_clustering\\.venv\\Lib\\site-packages\\torchvision\\models\\_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=None`.\n",
+                        "  warnings.warn(msg)\n"
+                    ]
+                },
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Loading model from climbing_model_epoch5.pth...\n",
+                        "Using image: Hold Detector.v2i.coco-segmentation\\test\\43d78bf0874b7b6def76e7d846ec6fc4_jpg.rf.8463ddc27821845eeff514149e782f7b.jpg\n",
+                        "Running inference...\n",
+                        "Visualizing results...\n",
+                        "Result saved to prediction_result.png\n"
+                    ]
+                }
+            ],
+            "source": [
+                "main()"
+            ]
         },
         {
             "cell_type": "code",
             "execution_count": null,
-            "id": "f3b2ec28",
+            "id": "bcadea8a",
             "metadata": {},
             "outputs": [],
             "source": []
